--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "scripts": {
     "start": "node bin start",
+    "who": "node bin whoami",
+    "invite": "node bin invite.create 1",
     "prepublishOnly": "npm test",
     "test": "set -e; for t in test/*.js; do echo TEST $t; node $t; done",
     "test:pretty": "npm run test | tap-spec",
@@ -24,16 +26,16 @@
     "broadcast-stream": "^0.2.1",
     "cont": "~1.0.3",
     "cross-spawn": "^6.0.5",
-    "debug": "^4.1.1",
+    "debug": "^4.3.4",
     "deep-equal": "^1.0.1",
     "explain-error": "^1.0.3",
     "has-network": "0.0.1",
-    "ip": "^1.1.5",
+    "ip": "^1.1.8",
     "mdmanifest": "^1.0.8",
-    "minimist": "^1.1.3",
-    "mkdirp": "~0.5.0",
-    "multiblob": "^1.13.0",
-    "multiserver": "^3.3.1",
+    "minimist": "^1.2.6",
+    "mkdirp": "^0.5.6",
+    "multiblob": "^1.13.8",
+    "multiserver": "^3.8.2",
     "multiserver-address": "^1.0.1",
     "muxrpc-validation": "^3",
     "muxrpcli": "3",
@@ -45,16 +47,16 @@
     "pull-pushable": "^2.2.0",
     "pull-stream": "^3.6.2",
     "rimraf": "^2.4.2",
-    "secret-stack": "^6.3.1",
+    "secret-stack": "^6.4.1",
     "ssb-blobs": "1.2.2",
     "ssb-caps": "^1.0.1",
     "ssb-client": "^4.7.9",
-    "ssb-config": "^3.2.5",
-    "ssb-db": "^20.0.1",
+    "ssb-config": "^3.4.6",
+    "ssb-db": "^20.4.1",
     "ssb-ebt": "^5.6.1",
-    "ssb-friends": "^4.1.0",
+    "ssb-friends": "^4.4.7",
     "ssb-gossip": "^1.1.0",
-    "ssb-invite": "^2.1.2",
+    "ssb-invite": "^2.1.7",
     "ssb-keys": "^7.1.1",
     "ssb-links": "^3.0.10",
     "ssb-local": "^1.0.0",
@@ -65,9 +67,9 @@
     "ssb-ooo": "^1.3.3",
     "ssb-plugins": "^1.0.4",
     "ssb-private1": "^1.0.1",
-    "ssb-query": "^2.4.0",
-    "ssb-ref": "^2.13.9",
-    "ssb-replicate": "^1.3.0",
+    "ssb-query": "^2.4.5",
+    "ssb-ref": "^2.16.0",
+    "ssb-replicate": "^1.3.3",
     "ssb-unix-socket": "^1.0.0",
     "ssb-ws": "^6.2.1",
     "stream-to-pull-stream": "^1.6.10",
@@ -84,13 +86,13 @@
     "pull-bitflipper": "^0.1.0",
     "pull-paramap": "^1.2.2",
     "rng": "^0.2.2",
-    "run-series": "^1.1.8",
+    "run-series": "^1.1.9",
     "semver": "^5.6.0",
     "ssb-feed": "^2.3.0",
     "ssb-generate": "^1.0.1",
-    "ssb-validate": "^4",
+    "ssb-validate": "^4.1.4",
     "tap-spec": "^5.0.0",
-    "tape": "^4.9.1",
+    "tape": "^4.15.1",
     "typewiselite": "^1.0.0"
   },
   "nyc": {
